--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,53 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/1.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="DESCRIPTION"
+      content="Jedną z wizytówek Pragi jest Most Karola wznoszący się na Wełtawą. Łączy on dzielnice Malá Strana i Staré Město. Konstrukcja ma 516 metrów długości i około 9,5 metra szerokości."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="Od 2007 roku w Pradze organizowany jest Festiwal Piwny trwający przez 17 dni maja."
+      content="index, follow"
+    />
+    <meta name="handheldFriendly" content="true" />
+    <meta property="og:image" content="https://praga.netlify.app/4.png" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Na terenie dzielnicy Malá Strana znajduje się mural poświęcony Johnowi Lennonowi."
+    />
+    <meta property="og:url" content="https://praga.netlify.app" />
+    <meta
+      property="og:description"
+      content="Vinárna Čertovka to najwęższa ulica w Pradze i jedna z najwęższych na świecie. Ma ona 50 cm szerokości."
+    />
+    <meta property="og:image" content="https://praga.netlify.app/1.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="https://twitter.com/holmespuaro" />
+    <meta
+      name="twitter:title"
+      content="Zgodnie z Księgą Rekordów Guinnessa w Pradze znajduje się największy zamek na świecie."
+    />
+    <meta
+      name="twitter:description"
+      content="Zamek na Hradczanach zajmuje powierzchnię 18 akrów."
+    />
+    <meta name="twitter:image" content="https://para.netlify.app/6.png" />
+    <meta
+      name="twitter:image:alt"
+      content=" W dzielnicy Strahov znajduje się największy stadion piłkarski na świecie."
+    />
+    <link rel="canonical" href="https://praga.netlify.app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/2.svg" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <style>
-      @font-face {
+      /* @font-face {
         font-family: "Glacial";
         src: url("./fonts/GlacialIndifference-Regular.otf");
       }
@@ -23,7 +56,7 @@
         font-family: "Glacial";
         font-weight: bold;
         src: url("./fonts/GlacialIndifference-Bold.otf");
-      }
+      } */
       @font-face {
         font-family: "Audiowide";
         src: url("./fonts/Audiowide-Regular.ttf");
@@ -41,5 +74,41 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://skrypt-cookies.pl/id/bc97833d298d0954.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org/",
+        "@type": "VideoObject",
+        "name": "Jak odkryć Boży plan?",
+        "contentUrl": "https://www.youtube.com/watch?v=IzLfHqFDRpc",
+        "duration": "PT00H04M33S",
+        "thumbnailUrl": "https://praga.netlify.app/1.png",
+        "uploadDate": "2021-08-03",
+        "description": "Jak odkryć Boży plan i jak go wypełnić? Czego chce od Ciebie Bóg?"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Blog",
+        "url": "https://praga.netlify.app"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "name": "Złota Praga",
+        "url": "https://bozyplan.netlify.app",
+        "sameAs": [
+          "https://www.facebook.com",
+          "https://www.google.pl",
+          "https://twitter.com",
+          "https://www.youtube.com/watch?v=tjQPurKS9lI",
+          "https://www.pinterest.com",
+          "https://www.instagram.com"
+        ]
+      }
+    </script>
   </body>
 </html>
