--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       name="twitter:description"
       content="Zamek na Hradczanach zajmuje powierzchnię 18 akrów."
     />
-    <meta name="twitter:image" content="https://para.netlify.app/6.png" />
+    <meta name="twitter:image" content="https://praga.netlify.app/6.png" />
     <meta
       name="twitter:image:alt"
       content=" W dzielnicy Strahov znajduje się największy stadion piłkarski na świecie."
