--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
       {
         "@context": "http://schema.org/",
         "@type": "VideoObject",
-        "name": "Jak odkryć Boży plan?",
+        "name": "Moje trasy",
         "contentUrl": "https://www.youtube.com/watch?v=IzLfHqFDRpc",
         "duration": "PT00H04M33S",
         "thumbnailUrl": "https://praga.netlify.app/1.png",
@@ -99,7 +99,7 @@
         "@context": "http://schema.org",
         "@type": "WebSite",
         "name": "Złota Praga",
-        "url": "https://bozyplan.netlify.app",
+        "url": "https://praga.netlify.app",
         "sameAs": [
           "https://www.facebook.com",
           "https://www.google.pl",
@@ -109,6 +109,20 @@
           "https://www.instagram.com"
         ]
       }
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-2F3DEYFWMW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-2F3DEYFWMW");
     </script>
   </body>
 </html>
