--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
         "duration": "PT00H04M33S",
         "thumbnailUrl": "https://praga.netlify.app/1.png",
         "uploadDate": "2021-08-03",
-        "description": "Jak odkryć Boży plan i jak go wypełnić? Czego chce od Ciebie Bóg?"
+        "description": "Wakacyjne podróże po Europie"
       }
     </script>
     <script type="application/ld+json">
